--- a/WhatIs.html
+++ b/WhatIs.html
@@ -1,7 +1,8 @@
 
 <TITLE>What is Hypertext?</TITLE>
 <NEXTID 20>
-<H1>What is HyperText</H1>Hypertext is text which is not constrained to be linear.<P>
+  
+<H1>What is all </H1>Hypertext is text which is not constrained to be linear.<P>
 Hypertext is text which contains <A NAME=0 HREF=Terms.html#link>links</A> to other texts. The term was
 coined by <A NAME=1 HREF=Xanadu.html#Nelson>Ted Nelson</A> around 1965 (see <A NAME=12 HREF=../History.html>History</A> ).<P>
 HyperMedia is a term used for hypertext which is not constrained to
