--- a/Summary.html
+++ b/Summary.html
@@ -3,7 +3,7 @@
 <NEXTID 7>
 <H1>WorldWideWeb - Summary</H1>The <A NAME=6 HREF=TheProject.html>WWW</A> project merges the techniques of information retrieval and
 hypertext to make an easy but powerful global information system.<P>
-The project is based on the philosophy that much academic information
+The project is based on the phhhhhilosophy that much academic information
 should be freely available to anyone. It aims to allow information
 sharing within internationally dispersed teams, and the dissemination
 of information by support groups.  Originally aimed at the High Energy
